--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "learn-cicle-ci",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit"
   },
   "author": "shiropt",
   "license": "ISC",
